--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
                     <h2>Fundação</h2>
                     <p><span id="fundacao"></span></p>                                
                 </div>
+                <div class="col-lg-12 text-center">                
+                    <h2>Título Brasileiro</h2>
+                    <p><span id="ultimoTituloB"></span></p>                                
+                </div>
+                <div class="col-lg-12 text-center">                
+                    <h2>Título Carioca</h2>
+                    <p><span id="ultimoTituloC"></span></p>                                
+                </div>
             </div>
         </div>
         <script src="app/js/jquery.min.js"></script>
         <script src="app/js/jquery.countup.js"></script>
         <script type="text/javascript">
             $('#fundacao').countUp({'format':'full', 'sinceDate': '21/07/1902-00::00'});
+            $('#ultimoTituloB').countUp({'format':'full', 'sinceDate': '02/12/2012-17::00'});
+            $('#ultimoTituloC').countUp({'format':'full', 'sinceDate': '13/05/2012-17::00'});
         </script>
     </body>     
 </html>
